<resources>
    <string name="app_name">nft</string>
    <string name="settings">Settings</string>
    <string name="dex">Dex</string>
    <string name="dapps">Dapps</string>
    <string name="wallet">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_nft_hint">Search NFT</string>
    <string name="trade">Trade</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="address">Address</string>
    <string name="network_list">Network List</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="network_fee">Network Fee</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="transaction_fees">Transaction Fees</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">fast</string>
    <string name="estimated">estimated</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_price">Gas Price</string>
    <string name="save">Save</string>
    <string name="transaction_data">Transaction Data</string>
</resources>