<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_color"
        tools:context=".ui.fragments.main.wallet.nft.confirm.ConfirmFragment">

        <include
            android:id="@+id/toolbar_transaction_fee"
            layout="@layout/toolbar_transaction_fee" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="@drawable/shape_bottom_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_transaction_fee">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/transaction_fee_cns_total_fee"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                android:background="@drawable/drawable_search_view_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transaction_fee_setting_til_gas_price"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                android:hint="@string/gas_price"
                android:textSize="@dimen/custom_search_view_edt_text_size_large"
                app:boxBackgroundColor="@color/search_view_bg_color"
                app:hintTextColor="@color/border_blue_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transaction_fee_cns_total_fee">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_fee_setting_edt_gas_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/custom_search_view_edt_text_size_large"
                    android:theme="@style/MyTextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transaction_fee_setting_til_gas_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                style="@style/MyTextInputLayout"
                android:hint="@string/gas_limit"
                android:textSize="@dimen/custom_search_view_edt_text_size_large"
                app:boxBackgroundColor="@color/search_view_bg_color"
                app:hintTextColor="@color/border_blue_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transaction_fee_setting_til_gas_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_fee_setting_edt_gas_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/custom_search_view_edt_text_size_large"
                    android:textColor="@color/white"
                    android:theme="@style/MyTextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transaction_fee_setting_til_transaction_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                style="@style/MyTextInputLayout"
                android:hint="@string/transaction_data"
                android:textSize="@dimen/custom_search_view_edt_text_size_large"
                app:boxBackgroundColor="@color/search_view_bg_color"
                app:hintTextColor="@color/border_blue_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@+id/transaction_fee_setting_til_gas_limit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_fee_setting_edt_transaction_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/custom_search_view_edt_text_size_large"
                    android:textColor="@color/white"
                    android:theme="@style/MyTextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/transaction_fee_setting_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
            android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
            android:layout_marginBottom="32dp"
            android:background="@drawable/gradient_bg_btn"
            android:fontFamily="@font/sans_bold"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/custom_search_view_edt_text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>