<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="confirmModel"
            type="com.arabnetwork.nft.models.ConfirmModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_color"
        tools:context=".ui.fragments.main.wallet.nft.confirm.ConfirmFragment">

        <include
            android:id="@+id/toolbar_confirm"
            layout="@layout/toolbar_confirm" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_radius"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="-10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_confirm">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirm_cns_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                android:background="@drawable/drawable_search_view_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/confirm_tv_from_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                    android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                    android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                    android:fontFamily="@font/sans_bold"
                    android:text="@string/from"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/custom_search_view_edt_text_size_large"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_tv_from"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/confirm_tv_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                    android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                    android:fontFamily="@font/sans_regular"
                    android:text="@{confirmModel.confirmFrom}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_gray_color"
                    android:textSize="@dimen/custom_search_view_edt_text_size_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginBottom="@dimen/custom_search_view_edt_padding_bottom"
                    android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_tv_from_txt" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirm_cns_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                android:background="@drawable/drawable_search_view_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_cns_from"
                >

                <TextView
                    android:id="@+id/confirm_tv_to_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                    android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                    android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                    android:fontFamily="@font/sans_bold"
                    android:text="@string/to"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/custom_search_view_edt_text_size_large"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_tv_to"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/confirm_tv_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                    android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                    android:fontFamily="@font/sans_regular"
                    android:text="@{confirmModel.confirmTo}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_gray_color"
                    android:textSize="@dimen/custom_search_view_edt_text_size_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginBottom="@dimen/custom_search_view_edt_padding_bottom"
                    android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_tv_to_txt" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirm_cns_network_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                android:background="@drawable/drawable_search_view_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_cns_to"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/custom_search_view_edt_padding_bottom"
                >

                <TextView
                    android:id="@+id/confirm_tv_network_fee_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                    android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                    android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                    android:fontFamily="@font/sans_bold"
                    android:text="@string/network_fee"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/custom_search_view_edt_text_size_large"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_tv_network_fee"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/confirm_tv_network_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
                    android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
                    android:fontFamily="@font/sans_regular"
                    android:text="@{confirmModel.confirmNetworkFee}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_gray_color"
                    android:textSize="@dimen/custom_search_view_edt_text_size_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginBottom="@dimen/custom_search_view_edt_padding_bottom"
                    android:layout_marginTop="@dimen/custom_search_view_edt_padding_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_tv_network_fee_txt" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_search_view_edt_padding_start"
            android:layout_marginEnd="@dimen/custom_search_view_edt_padding_end"
            android:layout_marginBottom="32dp"
            android:background="@drawable/gradient_bg_btn"
            android:fontFamily="@font/sans_bold"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/custom_search_view_edt_text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>